--- a/BlockDeNotas/index.html
+++ b/BlockDeNotas/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Block de Notas</title>
+    <title>Mini gestor de tareas</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <button id="toggle-theme-button">Modo Nocturno</button>
-        <h1>Block de Notas</h1>
+        <h1>Mini gestor de tareas</h1>
         <div class="input-container">
             <input type="text" id="task-input" placeholder="Nueva tarea">
             <input type="date" id="due-date-input">
