Cambio de titulos

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Block de Notas</title>
+    <title>Mini task</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <button id="toggle-theme-button">Modo Nocturno</button>
-        <h1>Block de Notas</h1>
+        <h1>Gestor de mini task</h1>
         <div class="input-container">
             <input type="text" id="task-input" placeholder="Nueva tarea">
             <input type="date" id="due-date-input">
